--- a/Template_submission_CASA0006.ipynb
+++ b/Template_submission_CASA0006.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [Road Accident Prediction in London]"
+    "# Big Data Analytics for Road Accident Prediction in London\n",
+    "\n",
+    "This paper examines data generated from road accidents across London and utilizes supervised Machine learning methods for prediction. It focuses on clustering accident hotspots and analyzing trends based on geographical locations and contributing factors. The findings aim to enhance policy maker to carry out targetted interventions in road safety and traffic management strategies and also identify key areas for intervention to reduce road accidents occurence.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [Towards Big Data Analytics for Road Accident Prediction in London]"
    ]
   },
   {
@@ -13,19 +22,52 @@
    "source": [
     "## Preparation\n",
     "\n",
-    "- [Github link](https://github.com/Idrisbaba/Accident_Prediction) *[Optional]*\n",
+    "- [Github link](https://github.com/Idrisbaba/Accident_Prediction) *[Github]*\n",
     "\n",
     "- Number of words: ***\n",
     "\n",
     "- Runtime: *** hours (*Memory 10 GB, CPU Intel i7-10700 CPU @2.90GHz*)\n",
     "\n",
-    "- Coding environment: SDS Docker (or anything else)\n",
+    "- Coding environment: SDS2024 Docker (or anything else)\n",
     "\n",
     "- License: this notebook is made available under the [Creative Commons Attribution license](https://creativecommons.org/licenses/by/4.0/) (or other license that you like).\n",
     "\n",
+    "First step is to, import the relevant libraries which will allow us to perform supervised machine learning workflow for road accident prediction in london\n",
+    "\n",
+    "* `pandas` for data import and handling;\n",
+    "* `matplotlib`; for visualization\n",
+    "* `numpy`; for manipulation numbers\n",
+    "* `sklearn`; for Machine learning \n",
+    "* `xgboost` for XGBoost models.\n",
+    "* `rfpimp` for permutation of feature importance.\n",
+    "\n",
+    "\n",
+    "\n",
     "- Additional library *[libraries not included in SDS Docker or not used in this module]*:\n",
     "    - **watermark**: A Jupyter Notebook extension for printing timestamps, version numbers, and hardware information.\n",
-    "    - ......"
+    "    - ......\n",
+    "\n",
+    "**Lets run the script below to get started.**    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import necessary libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import geopandas as gpd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score, f1_score, precision_score, recall_score\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from folium import Choropleth\n"
    ]
   },
   {
@@ -59,11 +101,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Recent studies predict that by 2030, traffic accidents will be the fifth leading cause of death worldwide (Venkat et al., 2020).  About 1.2 million people lose their lives annually due to road traffic accidents (Anjuman, T., Hasanat-E-Rabbi, S., Siddiqui, C.K.A. and Hoque, M.M., 2020). This may be attributed to several factors, including weather conditions, time of the day, locations of accidents, traffic volume, traffic lighting and road design. With the advent of self-driving or autonomous vehicles, it is likely that crashes might become more prevalent in the near future. Therefore, I believe that researching and predictions of road accidents could be one solution to addressing this pressing issue"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,11 +117,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "## 1. Prediction Modeling\n",
+    "- How can supervised machine learning models predict the likelihood of road accidents based on:\n",
+    "  - Weather conditions\n",
+    "  - Time of the day\n",
+    "  - Locations of accidents\n",
+    "  - Traffic volume\n",
+    "  - Road design?\n",
+    "\n",
+    "## 2. Feature Importance\n",
+    "- What environmental, temporal, and infrastructural factors most significantly contribute to the occurrence of road traffic accidents in London?\n",
+    "\n",
+    "## 3. Severity Classification\n",
+    "- How accurately can machine learning models classify the severity of road accidents (e.g., minor, major, or fatal) using:\n",
+    "  - Weather conditions\n",
+    "  - Time of the day\n",
+    "  - Locations of accidents\n",
+    "  - Traffic volume\n",
+    "  - Road design?\n",
+    "\n",
+    "## 4. High-Risk Detection\n",
+    "- Can predictive models identify high-risk areas or periods for accidents, providing actionable insights to reduce future occurrences?\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*[Note: a table that describes the selected variables for analysis and modelling is required - see the example below.]*"
+    "*[2023 London Road Accident Dataset and Lsoa shapefile.]*"
    ]
   },
   {
@@ -102,27 +165,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Variable                            | Type         | Description                                                             | Notes   |\r\n",
-    "|-------------------------------------|--------------|-------------------------------------------------------------------------|---------|\r\n",
-    "| accident_index                      | Categorical  | Unique identifier for each accident.                                    | Used as an index. |\r\n",
-    "| accident_year                       | Numeric      | Year in which the accident occurred.                                    |   |\r\n",
-    "| longitude                           | Numeric      | Longitude coordinate where the accident occurred.                       | Handle missing values. |\r\n",
-    "| latitude                            | Numeric      | Latitude coordinate where the accident occurred.                        | Handle missing values. |\r\n",
-    "| accident_severity                   | Categorical  | Severity level of the accident (e.g., minor, serious, fatal).           | Target variable for prediction. |\r\n",
-    "| number_of_vehicles                  | Numeric      | Number of vehicles involved in the accident.                            |   |\r\n",
-    "| number_of_casualties                | Numeric      | Number of casualties resulting from the accident.                       |   |\r\n",
-    "| date                                | Categorical  | Date of the accident in DD/MM/YYYY format.                              | Useful for temporal analysis. |\r\n",
-    "| day_of_week                         | Categorical  | Day of the week when the accident occurred (e.g., Monday = 2).          | Encoded as an integer (1 = Sunday). |\r\n",
-    "| time                                | Categorical  | Time of the accident (HH:MM format).                                    | Useful for time bucket creation. |\r\n",
-    "| road_type                           | Categorical  | Type of road where the accident occurred (e.g., roundabout, dual carriageway). | Encoded as an integer. |\r\n",
-    "| speed_limit                         | Numeric      | Speed limit of the road at the accident location.                       |   |\r\n",
-    "| junction_detail                     | Categorical  | Details about the junction (e.g., roundabout, crossroads).              | Encoded as an integer. |\r\n",
-    "| junction_control                    | Categorical  | Type of control at the junction (e.g., traffic signal, stop sign).       | Encoded as an integer. |\r\n",
-    "| light_conditions                    | Categorical  | Light conditions during the accident (e.g., daylight, darkness).         | Encoded as an integer. |\r\n",
-    "| weather_conditions                  | Categorical  | Weather conditions during the accident (e.g., rain, fog).                | Encoded as an integer. |\r\n",
-    "| road_surface_conditions             | Categorical  | Condition of the road surface during the accident (e.g., dry, wet).      | Encoded as an integer. |\r\n",
-    "| urban_or_rural_area                 | Categorical  | Indicates whether the accident occurred in an urban or rural area.       | Binary encoding (1 = urban, 2 = rural). |\r\n",
-    "| lsoa_of_accident_location           | Categorical  | Lower Layer Super Output Area where the accident occurred.               | Used for spatial analysis. |\r\n"
+    "| Variables                            | Type         | Description                                                             | Notes   |\n",
+    "|-------------------------------------|--------------|-------------------------------------------------------------------------|---------|\n",
+    "| accident_year                       | Numeric      | Year in which the accident occurred.                                    |   |\n",
+    "| longitude                           | Numeric      | Longitude coordinate where the accident occurred.                       | Handle missing values. |\n",
+    "| latitude                            | Numeric      | Latitude coordinate where the accident occurred.                        |  . |\n",
+    "| accident_severity                   | Categorical  | Severity level of the accident (e.g., minor, serious, fatal).           | Target variable for prediction. |\n",
+    "| number_of_vehicles                  | Numeric      | Number of vehicles involved in the accident.                            |   |\n",
+    "| number_of_casualties                | Numeric      | Number of casualties resulting from the accident.                       |   |\n",
+    "| date                                | Categorical  | Date of the accident in DD/MM/YYYY format.                              | Useful for temporal analysis. |\n",
+    "| day_of_week                         | Categorical  | Day of the week when the accident occurred (e.g., Monday = 2).          | Encoded as an integer (1 = Sunday). |\n",
+    "| time                                | Categorical  | Time of the accident (HH:MM format).                                    | Useful for time bucket creation. |\n",
+    "| road_type                           | Categorical  | Type of road where the accident occurred (e.g., roundabout, dual carriageway). | Encoded as an integer. |\n",
+    "| speed_limit                         | Numeric      | Speed limit of the road at the accident location.                       |   |\n",
+    "| junction_detail                     | Categorical  | Details about the junction (e.g., roundabout, crossroads).              | Encoded as an integer. |\n",
+    "| junction_control                    | Categorical  | Type of control at the junction (e.g., traffic signal, stop sign).       | Encoded as an integer. |\n",
+    "| light_conditions                    | Categorical  | Light conditions during the accident (e.g., daylight, darkness).         | Encoded as an integer. |\n",
+    "| weather_conditions                  | Categorical  | Weather conditions during the accident (e.g., rain, fog).                | Encoded as an integer. |\n",
+    "| road_surface_conditions             | Categorical  | Condition of the road surface during the accident (e.g., dry, wet).      | Encoded as an integer. |\n",
+    "| urban_or_rural_area                 | Categorical  | Indicates whether the accident occurred in an urban or rural area.       | Binary encoding (1 = urban, 2 = rural). |\n",
+    "| lsoa_of_accident_location           | Categorical  | Lower Layer Super Output Area where the accident occurred.               | Used for spatial analysis. |\n"
    ]
   },
   {
@@ -201,7 +263,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "sds2024",
    "language": "python",
    "name": "python3"
   },
@@ -215,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
