--- a/Template_submission_CASA0006.ipynb
+++ b/Template_submission_CASA0006.ipynb
@@ -22,12 +22,12 @@
     "\n",
     "---\n",
     "\n",
-    "- About this document: \n",
+    "- About this document:\n",
     "This is the assignment for the UCL CASA module Data Science for Spatial Systems (CASA0006)\n",
-    "This is a self contained Jupyter notebook with structure requirement, introduction, literature review, result and discussion, and conclusion with embeded code\n",
+    "This is a self contained Jupyter notebook with structure requirement, introduction, literature review, results and discussion, and conclusion with embedded code\n",
     "and bibliography.\n",
     "\n",
-    "Accronyms: \n",
+    "Acronyms:\n",
     "\n",
     "- RF = Random Forest\n",
     "- ML = Machine Learning\n",
@@ -76,13 +76,13 @@
     "\n",
     "- Number of words: 1486\n",
     "\n",
-    "- Runtime: *** hours (*Memory 8 GB, CPU Intel i5-10700 CPU @2.50GHz*)\n",
+    "- Runtime: *** hours (*Memory 8 GB, CPU Intel i5-10700 CPU @2.50 *)\n",
     "\n",
     "- Coding environment: SDS2024 powered by Anaconda, run on VS Code hosted on Github for reproducibility  \n",
     "\n",
     "- License: this notebook is made available under the [Creative Commons Attribution license](https://creativecommons.org/licenses/by/4.0/) (or other license that you like).\n",
     "\n",
-    "First step is to, import the relevant libraries which will allow us to perform supervised machine learning workflow for road accident prediction in london\n",
+    "First step is to, import the relevant libraries, which will allow us to perform supervised machine learning workflow for road accident prediction in london\n",
     "\n",
     "* `pandas` for data import and handling;\n",
     "* `matplotlib`; for visualization\n",
@@ -94,12 +94,12 @@
     "\n",
     "\n",
     "- **Additional library** \n",
-    "- **SMOTE**: for blancing data imbalance\n",
+    "- **SMOTE**: for balancing data imbalance\n",
     "- !pip install **pandoc** : for pdf saving pdf \n",
     "-  **TeX Live** and **MiKTeX**: for generating pdf from jupyter notebook on windows OS\n",
     "    \n",
     "\n",
-    "**Lets run the script below to get started.**    "
+    "**Let's run the script below to get started.**    "
    ]
   },
   {
@@ -1079,10 +1079,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.0 Methodology\n",
+    "### 5.1 Methodology\n",
     "\n",
     "\n",
-    "This study employs a data-driven approach to predict and visulize the likelihood of road accidents using ML models by identifying and forcasting the contributing factors of road accident in London. As stated earlier in the literature reveiw there were several machine learning approaches employed by researchers to classify and carry out predictive modeling which is becoming widely accepted in investigating accident occurrence (Takale et al., 2022). combining clustering techniques like K-means with a supervised machine learning classification algorithms like Random Forest, have shown promising results in improving prediction accuracy (Yassin & Pooja, 2020). Which is why I will leverage similar methodologies such as Random Forest and XGBoost machine learning methoddologies, which have shown clear improvements over traditional ML techniques, these techniques can often achieve higher accuracy and robustness compared to single models (Morales and Escalante, 2022). \n",
+    "This study employs a data-driven approach to predict and visualize the likelihood of road accidents using ML models by identifying and forecasting the contributing factors of road accidents in London. As stated earlier in the literature review, there were several machine learning approaches employed by researchers to classify and carry out predictive modeling, which is becoming widely accepted in investigating accident occurrence (Takale et al., 2022). Combining clustering techniques like K-means with supervised machine learning classification algorithms like Random Forest has shown promising results in improving prediction accuracy (Yassin & Pooja, 2020). Which is why I will leverage similar methodologies such as Random Forest and XGBoost machine learning methodologies, which have shown clear improvements over traditional ML techniques; these techniques can often achieve higher accuracy and robustness compared to single models (Morales and Escalante, 2022). \n",
     "\n",
     "\n",
     "\n"
@@ -1092,7 +1092,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5.1 Limitations of supervised machine learning** : Machine learning methodologies is fully reliant on the quality of data, therefore  data size and data quality is very important in the application of road accident prediction analysis (Khosravi, Y., et al , 2024)., it’s like garbage in garbage out scenario, wherby once the data is inaccurate your result will be skewed and inaccurate because computer models learn from experience (Tom Mitchell, 1997) therefore in accident predictions the amount of training data can  hinder the prediction of accidents. \n"
+    "**5.2 Limitations of Supervised Machine Learning:** Machine learning methodologies is fully reliant on the quality of data, therefore  data size and data quality is very important in the application of road accident prediction analysis (Khosravi, Y., et al , 2024)., it’s like garbage in garbage out scenario, whereby once the data is inaccurate, your result will be skewed and inaccurate because computer models learn from experience (Tom Mitchell, 1997); therefore, in accident predictions, the amount of training data can  hinder the prediction of accidents. \n"
    ]
   },
   {
@@ -1650,6 +1650,7 @@
    "metadata": {},
    "source": [
     "## 6.1 Data Preprocessing and Class Balancing for Road Accident Prediction\n",
+    "\n",
     "This step ensures missing values is handled, corrects target labels, encodes categorical features, balances the dataset, and validates the preprocessing steps, and split data into training set. "
    ]
   },
@@ -1859,7 +1860,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above plot suggest that some folds are underperforming therefore the need for Cross-validation could make sure that the model generalizes well. however, hyperparameter tunning could stabilize performance across folds."
+    "The above plot suggests that some folds are underperforming; therefore, the need for cross-validation could make sure that the model generalizes well. However, hyperparameter tuning could stabilize performance across folds."
    ]
   },
   {
@@ -1869,7 +1870,7 @@
     "# 6.2 Hyperparameter Tuning using GridSearchCV\n",
     "- Fine-tuning improves model accuracy by balancing underperforming classes and capturing complex patterns. Cross-validation prevents overfitting, ensuring generalization. F1-weighted scoring enhances precision and recall, minimizing false predictions. Hyperparameter tuning refines pattern recognition for optimal accident forecasting.\n",
     "\n",
-    "Overall,  these step bellow could refine the model's ability to detect accident-prone conditions, leading to stronger forecasting or prediction."
+    "Overall, these steps below could refine the model's ability to detect accident-prone conditions, leading to stronger forecasting or prediction."
    ]
   },
   {
@@ -2441,7 +2442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To further improve the model performance we will carry out the step bellow. this could help address class imballance. Additionally, **n_estimators=100** ensures the model has a reasonable number of trees for stable predictions without excessive computational cost."
+    "To further improve the model performance, we will carry out the step below. This could help address class imbalance. Additionally, **n_estimators=100** ensures the model has a reasonable number of trees for stable predictions without excessive computational cost."
    ]
   },
   {
@@ -2932,7 +2933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The feature importance plot provides insights into the factors that are most influential in predicting accident severity. Indicating features like hour, month speed limit and weekday to be the most signoficant while weekend, urban rural areas, road surface condition to be the less significant. "
+    "The feature importance plot provides insights into the factors that are most influential in predicting accident severity. Indicating features like hour, month, speed limit, and weekday to be the most significant while weekend, urban, rural areas, and road surface condition are less significant. "
    ]
   },
   {
@@ -3029,7 +3030,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After tuning, the model achieves better fitting. At depth 20, it balances bias and variance, ensuring optimal predictive accuracy for accident occurrence while avoiding overfitting."
+    "After tuning, the model achieves better fitting at depth 20; it also balances bias and variance, ensuring optimal predictive accuracy for accident occurrence while avoiding overfitting."
    ]
   },
   {
@@ -3193,7 +3194,7 @@
    "metadata": {},
    "source": [
     "## 6.3 Key observations on both random forest and XGboost models on road accident prediction\n",
-    "- Time related features, such as the hour of the day, are highly influential in accident prediction, suggesting that timing and seasonal variations plays an important role in London's accident prediction. Further exploratory data analysis will explore peak accident hours. The number of vehicles also indicate higher risks during rush hours due to dense traffic, while weather factors highlight environmental influences on accident likelihood. \n"
+    "- Time-related features, such as the hour of the day, are highly influential in accident prediction, suggesting that timing and seasonal variations play an important role in London accident prediction. Further exploratory data analysis will explore peak accident hours. The number of vehicles also indicates higher risks during rush hours due to dense traffic, and road characteristics and weather highlight environmental influences on accident likelihood. \n"
    ]
   },
   {
@@ -3276,7 +3277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above model comparism shows that the XGBoost model was able to achieve higher performance than the random forest. However, the tunned random forest was able to peform sligtly better than XGBoost.\n",
+    "The above model comparison shows that the XGBoost model was able to achieve higher performance than the random forest. However, the tuned random forest was able to perform slightly better than XGBoost.\n",
     "\n",
     "This suggests that the XGBoost model offers better generalization and is less prone to overfitting compared to the Random Forest model. "
    ]
@@ -3294,11 +3295,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The findings of this study was able to address the potential of machine learning in road accident prediction and visualization in London. By leveraging supervised machine learning models such as Random Forest and XGBoost, where we have demonstrated that predictive analytics can effectively asses the influence of environmental, temporal and infrastructural factors.\n",
+    "The findings of this study were able to address the potential of machine learning in road accident prediction and visualization in London. By leveraging supervised machine learning models such as Random Forest and XGBoost, we have demonstrated that predictive analytics can effectively assess the influence of environmental, temporal, and infrastructural factors.\n",
     "\n",
-    "More so, feature importance analysis shows a very strong influence in accident prediction between time of the day, season and traffic volume, whereby these variables happen to have a higher influence on accident prediction. while the  comparative evaluation of models suggests that tuned Random Forest could be reliable however xgboost happen to have a better performance at first trail. \n",
+    "More so, feature importance analysis shows a very strong influence in accident prediction between time of the day, season, and traffic volume, whereby these variables happen to have a higher influence on accident prediction. While the comparative evaluation of models suggests that tuned random forest could be reliable, however, xgboost happened to have a better performance at the first trial. \n",
     "\n",
-    "Overall, this study contributes to the growing body of research in big data analytics for road safety, offering actionable insights for policymakers, urban planners, and transportation authorities. By integrating data-driven strategies into safety planning, stakeholders can implement targeted interventions in addressing road accidents prediction, optimize traffic management, and enhance public safety. Future research could explore additional data sources and methodolgies such as spatial clustering and explore other predictive models to further improve predictive accuracy and it's real world applicability."
+    "Overall, this study contributes to the growing body of research in big data analytics for road safety, offering actionable insights for policymakers, urban planners, and transportation authorities. By integrating data-driven strategies into safety planning, stakeholders can implement targeted interventions in addressing road accident prediction, optimize traffic management, and enhance public safety. Future research could explore additional data sources and methodologies such as spatial clustering and explore other predictive models to further improve predictive accuracy and its real-world applicability."
    ]
   },
   {
